<resources>

    <string name="app_name">DailyPlan</string>

    <string name="nutente">Nome Utente</string>
    <string name="password">Password</string>
    <string name="accedi">Accedi</string>
    <string name="credenziali">Memorizza credenziali</string>


    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_example">Example action</string>
    <string name="search_hint">Cerca:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ufficio">Svolto in ufficio</string>
    <string name="data">Data evento</string>
    <string name="datap">Data Proposta</string>
    <string name="codici">Codici proposte esistenti</string>
    <string name="nuovo">Nuovo codice proposta</string>
    <string name="cliente">Cliente</string>
    <string name="causale">Causale</string>
    <string name="note">Note</string>
    <string name="hhmm">HH:MM</string>
    <string name="ggmmaa">gg/mm/aaaa</string>


    <string name="search">Search</string>
    <string name="calendar">Calendar</string>


    <string-array name="drawer_menu_array">
        <item>Calendario</item>
        <item>I miei eventi</item>
        <item>Eventi proposti</item>
        <item>Rubrica clienti</item>
    </string-array>

    <string name="icon_calendar">&#xf274;</string>
    <string name="icon_time">&#xf017;</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_tab_event">TabEventActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_creation">EventCreation</string>
    <string name="title_activity_proposal_creation">ProposalCreationActivity</string>
</resources>
